plugins/kotlin/idea/tests/testData/highlighterMetaInfo/diagnostics/dataClassFromLibrary.kt.highlighting
// ALLOW_ERRORS
val fgs = MyDependency(classifier = "")
val dva = fgs.copy(classifier = "")
val dva2 = fgs.copy(<!HIGHLIGHTING("severity='ERROR'; descr='[NAMED_PARAMETER_NOT_FOUND] Cannot find a parameter with this name: abc'")!>abc<!> = "")
